# Work.1

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  gitignore
Resources/: Images.cdr  SamaraMain.eez-project  SamaraMain.eez-project-ui-state
components/espressif__esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
main/: CMakeLists.txt  PressureUnits.c  PressureUnits.h  board_GPIOext.c  board_GPIOext.h  board_i2c.c  board_i2c.h  communication._c  communication.c  communication.h  display.c  display.h  gui.c  gui.h  idf_component.yml  main.c  mainboardcommands.c  mainboardcommands.h
main/ui/: actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_font_main_rus_14.c  ui_font_main_rus_36.c  ui_image_splash_metran_logo.c  vars.c  vars.h
